# UppreSSO-Code-Flow

./: .gitignore
code/: README.md
code/IdP/: pom.xml
code/IdP/openid-connect-common/: pom.xml
code/IdP/openid-connect-server/: pom.xml
code/IdP/openid-connect-server-webapp/: ohttp_pub.pem  pom.xml
code/IdP/spring-security-oauth/: pom.xml
code/RP/: build.gradle
code/Relay Server/: relay.py
code/Tools/: build.gradle  settings.gradle
code/chrome-entends（之前的版本uppresso需要，当前版本不需要）/: authorize.js
code/issuer/: package-lock.json  package.json  wrangler.toml
code/issuer/patches/: @cloudflare+privacypass-ts+0.7.2.patch
code/issuer/src/: bindings.ts  challenge.ts  index.ts
code/jni/: CMakeLists.txt  secp256k1zkp_jni.c
code/secp256k1-zkp/include/: secp256k1_whitelist.h
code/sidecar/: esbuild.config.mjs  package-lock.json  package.json  tsconfig.json
code/sidecar/src/: batch.ts  client.ts  config.ts  index.ts  issuer-client.ts  issuer.ts  test.mjs  token-store.ts  verify.ts
源代码/: uppresso部署.docx  ~$presso部署.docx
源代码/IdP/: pom.xml
源代码/RP/: build.gradle
源代码/chrome-entends（之前的版本uppresso需要，当前版本不需要）/: background - 副本.js  background.js  manifest.json  popup.html  popup.js  userinfo.js
论文/: TimeTest.xlsx
论文/tex文件/: UPPRESSO.tex  ref.bib
论文/tex文件/chap_Compact/: analysis.tex  analysis_1.tex  appendix backup.tex  appendix.tex  background.tex  challenges.tex  conclusion.tex  discussion.tex  evaluation.tex  implementation.tex  introduction.tex  privacy.tex  protocol.tex  relatedwork.tex  threatmodel.tex  webmodel.tex
论文/tex文件/fig/: IDCorrelation.vsd  (+5 more)
(+164 files in other folders)
